--- a/.github/workflows/pull_request_checks.yml
+++ b/.github/workflows/pull_request_checks.yml
@@ -46,7 +46,8 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: Apply Size Label
+      - if: ${{ github.event.pull_request.head.repo.full_name == 'Jigsaw-Code/outline-server' }}
+        name: Apply Size Label
         uses: pascalgn/size-label-action@a4655c448bb838e8d73b81e97fd0831bb4cbda1e
         env:
           IGNORED: |
