--- a/.github/workflows/pull_request_checks.yml
+++ b/.github/workflows/pull_request_checks.yml
@@ -48,7 +48,7 @@ jobs:
     steps:
       # size-label-action fails to work when coming from a fork:
       # https://github.com/pascalgn/size-label-action/issues/10
-      - if: '! github.event.pull_request.head.repo.fork'
+      - if: ${{ !github.event.pull_request.head.repo.fork }}
         name: Apply Size Label
         uses: pascalgn/size-label-action@a4655c448bb838e8d73b81e97fd0831bb4cbda1e
         env:
