this breaks, but is the easiest path forward

--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -76,25 +76,21 @@
     "@types/puppeteer": "^5.4.2",
     "@types/request": "^2.47.1",
     "@types/semver": "^5.5.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^3.5.3",
-    "electron": "18.1.0",
-    "electron-builder": "~23.0.3",
-    "electron-icon-maker": "^0.0.4",
+    "electron": "^20.1.1",
+    "electron-builder": "^23.5.0",
     "electron-notarize": "^1.2.1",
     "electron-to-chromium": "^1.4.122",
-    "gulp": "^4.0.0",
-    "gulp-posthtml": "^3.0.4",
-    "gulp-replace": "^1.0.0",
     "html-webpack-plugin": "^4.2.1",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-webpack": "^4.0.2",
-    "node-jq": "^1.11.2",
-    "postcss": "^7.0.29",
+    "node-jq": "^2.3.3",
+    "postcss": "^7.0.36",
     "postcss-rtl": "^1.7.3",
-    "posthtml-postcss": "^0.2.6",
+    "posthtml-postcss": "^0.5.0",
     "puppeteer": "^13.6.0",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.1",
