--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jasmine": "^3.5.0",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "typescript": "^4"
+    "typescript": "^4",
+    "webpack": "^4.46.0"
   },
   "engines": {
     "node": "^16.13.0",
