--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 *                               @Jigsaw-Code/outline-dev
 
 /src/server_manager/model/      @fortuna 
-/src/shadowbox/model/           @fortuna 
+/src/shadowbox/           @fortuna 
