--- a/.github/workflows/pull_request_checks.yml
+++ b/.github/workflows/pull_request_checks.yml
@@ -55,10 +55,10 @@ jobs:
           IGNORED: |
             LICENSE
             package-lock.json
-            resources
-            src/server_manager/messages
-            src/server_manager/images
-            third_party
+            resources/*
+            src/server_manager/messages/*
+            src/server_manager/images/*
+            third_party/*
         with:
           sizes: >
             {
