--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -18,7 +18,8 @@ ARG NODE_IMAGE
 # Run `npm ci` and build inside the container to package the right dependencies for the image.
 FROM ${NODE_IMAGE} AS build
 
-RUN apk add --no-cache --upgrade bash make
+# make for building third_party/prometheus and pearl-utils for shasum.
+RUN apk add --no-cache --upgrade bash make pearl-utils
 WORKDIR /
 
 # Don't copy node_modules and other things not needed for install.
