chore(server): upgrades (#1211)
- Upgrade Prometheus to 2.37.1
- Upgrade outline-ss-server to 1.4.0
- Fetch Prometheus and outline-ss-server binaries on demand. Remove from repo because of file size limit
- Upgrade base node image.

--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -18,7 +18,8 @@ ARG NODE_IMAGE
 # Run `npm ci` and build inside the container to package the right dependencies for the image.
 FROM ${NODE_IMAGE} AS build
 
-RUN apk add --no-cache --upgrade bash
+# make for building third_party/prometheus and perl-utils for shasum.
+RUN apk add --no-cache --upgrade bash make perl-utils
 WORKDIR /
 
 # Don't copy node_modules and other things not needed for install.
