--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -79,7 +79,7 @@
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
     "electron": "18.1.0",
-    "electron-builder": "~23.0.3",
+    "electron-builder": "^23.6.0",
     "electron-icon-maker": "^0.0.4",
     "electron-notarize": "^1.2.1",
     "electron-to-chromium": "^1.4.122",
