fix build errors caused by the latest node-fetch by using node-fetch@2

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,11 +27,7 @@
           {
             "target": "./src/shadowbox/infrastructure",
             "from": ".",
-            "except": [
-              "./src/shadowbox/infrastructure",
-              "./node_modules",
-              "./src/shadowbox/node_modules"
-            ]
+            "except": ["./src/shadowbox/infrastructure", "./node_modules"]
           },
           {
             "target": "./src/server_manager/infrastructure",
