--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "outline-server",
   "private": true,
+  "dependencies": {
+    "node-fetch": "^2.6.7"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.0",
     "@types/jasmine": "^3.5.10",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "@webpack-cli/serve": "^1.6.1",
@@ -15,7 +19,6 @@
     "generate-license-file": "^1.2.0",
     "husky": "^1.3.1",
     "jasmine": "^3.5.0",
-    "node-fetch": "^3.3.0",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
     "typescript": "^4"
