build(devtools/build): 👷 exclude jsign.jar from the repository (#1263)
According to #1250 , we are not allowed to include binaries in this repository. In this PR, I removed `./third_party/jsign/jsign-4.2.jar`, it will be downloaded during build process on demand. The workflow is:

* If we are not building for Windows, nothing happens
* If we are building for Windows but not signing the binaries (for example dev builds), nothing happens
* If we are building and signing Windows binaries:
  * If `jsign-4.2.jar` already exists and matches checksum, nothing happens
  * otherwise, we will download it from [jsign's official GitHub releases](https://github.com/ebourg/jsign/releases)

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "outline-server",
   "private": true,
+  "dependencies": {
+    "node-fetch": "^2.6.7"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.0",
     "@types/jasmine": "^3.5.10",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "@webpack-cli/serve": "^1.6.1",
@@ -27,7 +31,7 @@
     "action": "bash ./scripts/run_action.sh",
     "action:help": "npm run action",
     "action:list": "npm run action",
-    "clean": "rm -rf src/*/node_modules/ build/ node_modules/ src/server_manager/install_scripts/do_install_script.ts src/server_manager/install_scripts/gcp_install_script.ts third_party/shellcheck/download/ third_party/*/bin",
+    "clean": "rm -rf src/*/node_modules/ build/ node_modules/ src/server_manager/install_scripts/do_install_script.ts src/server_manager/install_scripts/gcp_install_script.ts third_party/shellcheck/download/ third_party/*/bin third_party/jsign/*.jar",
     "format": "pretty-quick --staged --pattern \"**/*.{cjs,html,js,json,md,ts}\"",
     "format:all": "prettier --write \"**/*.{cjs,html,js,json,md,ts}\"",
     "lint": "npm run lint:sh && npm run lint:ts",
