--- a/src/metrics_server/package.json
+++ b/src/metrics_server/package.json
@@ -5,9 +5,6 @@
   "description": "Outline metrics server",
   "author": "Outline",
   "license": "Apache",
-  "__COMMENTS__": [
-    "@google-cloud/storage here only to help Typescript code using @google-cloud/bigquery compile"
-  ],
   "dependencies": {
     "@google-cloud/bigquery": "^5.12.0",
     "express": "^4.17.1"
@@ -18,5 +15,8 @@
   },
   "scripts": {
     "start": "node ./index.js"
-  }
+  },
+  "notes": [
+    "The @google-cloud/storage dependency is only needed to help TypeScript code using @google-cloud/bigquery compile."
+  ]
 }
