Add `NODE_OPTIONS=--openssl-legacy-provider` to workflow as per https://nodejs.org/en/blog/release/v17.0.0#openssl-30.

--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -51,7 +51,7 @@ jobs:
         run: npm ci
 
       - name: Shadowbox Debug Build
-        run: npm run action shadowbox/server/build
+        run: NODE_OPTIONS=--openssl-legacy-provider npm run action shadowbox/server/build
 
       - name: Shadowbox Unit Test
         run: npm run action shadowbox/test
