--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -170,3 +170,26 @@ jobs:
 
       - name: Build MacOS Manager
         run: npm run action server_manager/electron_app/build macos
+
+  sentry-webhook:
+    name: Semtru Webhook
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: npm
+
+      - name: Install NPM Dependencies
+        run: npm ci
+
+      - name: Sentry Webhook Debug Build
+        run: npm run action metrics_server/build
+
+      - name: Sentry Webhook Test
+        run: npm run action sentry_webook/test
