--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "outline-server",
   "private": true,
   "dependencies": {
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "restify": "^11.1.0",
+    "restify-cors-middleware": "^1.1.1",
+    "restify-errors": "^8.0.2"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.0",
