--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -82,6 +82,29 @@ jobs:
       - name: Metrics Server Test
         run: npm run action metrics_server/test
 
+  sentry-webhook:
+    name: Sentry Webhook
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: npm
+
+      - name: Install NPM Dependencies
+        run: npm ci
+
+      - name: Sentry Webhook Debug Build
+        run: npm run action sentry_webhook/build
+
+      - name: Sentry Webhook Test
+        run: npm run action sentry_webhook/test
+
   manager-web-test:
     name: Manager Web Test
     runs-on: ubuntu-latest
