--- a/src/shadowbox/package.json
+++ b/src/shadowbox/package.json
@@ -16,7 +16,7 @@
     "prom-client": "^11.1.3",
     "randomstring": "^1.1.5",
     "restify": "^11.1.0",
-    "restify-cors-middleware": "^1.1.1",
+    "restify-cors-middleware2": "^2.2.1",
     "restify-errors": "^8.0.2",
     "uuid": "^3.1.0"
   },
