--- a/src/shadowbox/package.json
+++ b/src/shadowbox/package.json
@@ -15,8 +15,8 @@
     "outline-shadowsocksconfig": "github:Jigsaw-Code/outline-shadowsocksconfig#v0.2.0",
     "prom-client": "^11.1.3",
     "randomstring": "^1.1.5",
-    "restify": "^8.5.1",
-    "restify-cors-middleware2": "2.2.1",
+    "restify": "^11.1.0",
+    "restify-cors-middleware": "^1.1.1",
     "restify-errors": "^8.0.2",
     "uuid": "^3.1.0"
   },
@@ -25,6 +25,7 @@
     "@types/node": "^12",
     "@types/randomstring": "^1.1.6",
     "@types/restify": "^8.4.2",
+    "@types/restify-cors-middleware": "^1.0.1",
     "@types/tmp": "^0.2.1",
     "tmp": "^0.2.1",
     "ts-loader": "^7.0.4",
