--- a/src/shadowbox/tsconfig.json
+++ b/src/shadowbox/tsconfig.json
@@ -7,7 +7,8 @@
     "module": "commonjs",
     "rootDir": ".",
     "resolveJsonModule": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "skipLibCheck": true
   },
   "include": ["server/main.ts", "**/*.spec.ts", "types/**/*.d.ts"],
   "exclude": ["build", "node_modules"]
