--- a/src/sentry_webhook/tsconfig.json
+++ b/src/sentry_webhook/tsconfig.json
@@ -4,7 +4,8 @@
     "removeComments": false,
     "strict": true,
     "module": "commonjs",
-    "outDir": "../../build/sentry_webhook"
+    "outDir": "../../build/sentry_webhook",
+    "skipLibCheck": true
   },
   "include": ["**/*.ts"]
 }
