--- a/src/sentry_webhook/package.json
+++ b/src/sentry_webhook/package.json
@@ -11,6 +11,7 @@
     "@types/jasmine": "^5.1.0",
     "https-browserify": "^1.0.0",
     "jasmine": "^5.1.0",
+    "stream-http": "^3.2.0",
     "url": "^0.11.3"
   }
 }
