--- a/src/sentry_webhook/package.json
+++ b/src/sentry_webhook/package.json
@@ -9,6 +9,9 @@
     "@sentry/types": "^4.4.1",
     "@types/express": "^4.17.12",
     "@types/jasmine": "^5.1.0",
-    "jasmine": "^5.1.0"
+    "https-browserify": "^1.0.0",
+    "jasmine": "^5.1.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3"
   }
 }
