okay, can turn this back on

--- a/src/server_manager/electron_app/tsconfig.json
+++ b/src/server_manager/electron_app/tsconfig.json
@@ -3,7 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "es2021",
     "removeComments": false,
-    // "noImplicitAny": true,
+    "noImplicitAny": true,
     "esModuleInterop": true,
     "module": "commonjs",
     "rootDir": "..",
