--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -59,7 +59,7 @@
       "PUPPETEER_CHROMIUM_REVISION": [
         "The Chromium revision number used by Karma.  This should always be the revision number of",
         "the bundled Chromium in our version of Electron.  Whenever upgrading Electron, run the",
-        "server_manager tests.  You'll get a failure that looks like <Expected '812852' to equal '693954>.",
+        "server_manager tests.  You'll get a failure that looks like <Expected 812852 to equal 693954>.",
         "Set PUPPETEER_CHROMIUM_REVISION to the first of those numbers to get the correct revision",
         "and `npm ci` to re-install puppeteer, causing it to download the new",
         "Chromium version."
@@ -67,7 +67,7 @@
     }
   },
   "config": {
-    "PUPPETEER_CHROMIUM_REVISION": "992738"
+    "PUPPETEER_CHROMIUM_REVISION": 992738
   },
   "devDependencies": {
     "@types/node": "^16.11.29",
