--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -67,7 +67,10 @@ jobs:
         uses: actions/checkout@v2.3.4
       
       - name: Install Outline Server
-        run: bash src/server_manager/install_scripts/install_server.sh
+        run: SB_API_PREFIX='TestApiPrefix' ./src/server_manager/install_scripts/install_server.sh --api-port 8080
+      
+      - name: Test API
+        run: curl --insecure https://localhost:8080/TestApiPrefix/server
 
   metrics-server:
     name: Metrics Server
