--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -67,7 +67,7 @@ jobs:
         uses: actions/checkout@v2.3.4
       
       - name: Install Outline Server
-        run: ./src/server_manager/install_scripts/install_server.sh --api-port 8080
+        run: ./src/server_manager/install_scripts/install_server.sh
       
       - name: Test API
         run: 'curl --fail --insecure $(grep "apiUrl" /opt/outline/access.txt | cut -d: -f 2-)/server'
