--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -59,6 +59,19 @@ jobs:
       - name: Shadowbox Integration Test
         run: npm run action shadowbox/integration_test/run
 
+  manual-install-script:
+    name: Manual Install Script
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+      
+      - name: Install Outline Server
+        run: ./src/server_manager/install_scripts/install_server.sh --hostname localhost
+      
+      - name: Test API
+        run: 'curl --silent --fail --insecure $(grep "apiUrl" /opt/outline/access.txt | cut -d: -f 2-)/server'
+
   metrics-server:
     name: Metrics Server
     runs-on: ubuntu-latest
