--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -49,6 +49,7 @@
     "google-auth-library": "^8.0.2",
     "intl-messageformat": "^7",
     "jsonic": "^0.3.1",
+    "lit": "^3.1.1",
     "lit-element": "^2.3.1",
     "node-forge": "^1.3.1",
     "request": "^2.87.0",
