--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "generate-license-file": "^1.2.0",
     "husky": "^1.3.1",
     "jasmine": "^3.5.0",
+    "minimist": "^1.2.8",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
     "typescript": "^4.9.5"
