--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -25,7 +25,7 @@ WORKDIR /
 # Don't copy node_modules and other things not needed for install.
 COPY package.json package-lock.json ./
 COPY src/shadowbox/package.json src/shadowbox/
-RUN npm ci
+RUN --mount=type=cache,target=/root/.npm npm ci
 
 # We copy the source code only after npm ci, so that source code changes don't trigger re-installs.
 COPY scripts scripts/
