--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -38,6 +38,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
+      - name: Setup Podman
+        run: |
+          sudo apt update
+          sudo apt-get -y install podman
+
       - name: Checkout
         uses: actions/checkout@v2.3.4
 
