--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -38,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-      - name Set up Podman
+      - name: Set up Podman
         run: sudo apt-get update && sudo apt-get -y install podman
 
       - name: Podman Version
