Actually disable cache

--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -27,7 +27,7 @@ COPY package.json package-lock.json ./
 COPY src/shadowbox/package.json src/shadowbox/
 # Enable cache when the Github action Ubuntu runner supports podman 4.
 # RUN --mount=type=cache,target=/root/.npm npm ci
-RUN --mount=type=cache,target=/root/.npm npm ci
+RUN npm ci
 
 # We copy the source code only after npm ci, so that source code changes don't trigger re-installs.
 COPY scripts scripts/
