--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -154,13 +154,13 @@ paths:
                   type: string
                 port:
                   type: integer
-                dataLimit:
+                limit:
                   $ref: "#/components/schemas/DataLimit"
             examples:
               'No params specified':
                 value: '{"method":"aes-192-gcm"}'
               'Provide params':
-                value: '{"method":"aes-192-gcm","name":"First","password":"8iu8V8EeoFVpwQvQeS9wiD","limit":{"bytes":10000}}'
+                value: '{"method":"aes-192-gcm","name":"First","password":"8iu8V8EeoFVpwQvQeS9wiD","port": 12345,"limit":{"bytes":10000}}'
       responses:
         '201':
           description: The newly created access key
@@ -196,11 +196,11 @@ paths:
                   type: string
                 port:
                   type: integer
-                dataLimit:
+                limit:
                   $ref: "#/components/schemas/DataLimit"
             examples:
               '0':
-                value: '{"id":"123","method":"aes-192-gcm","name":"First","password":"8iu8V8EeoFVpwQvQeS9wiD","limit":{"bytes":10000}}'
+                value: '{"id":"123","method":"aes-192-gcm","name":"First","password":"8iu8V8EeoFVpwQvQeS9wiD","port": 12345,"limit":{"bytes":10000}}'
       responses:
         '201':
           description: The newly created access key
