--- a/src/sentry_webhook/package.json
+++ b/src/sentry_webhook/package.json
@@ -14,6 +14,7 @@
     "karma": "^6.4.2",
     "puppeteer": "^13.6.0",
     "stream-http": "^3.2.0",
-    "url": "^0.11.3"
+    "url": "^0.11.3",
+    "webpack": "^5.90.3"
   }
 }
