--- a/src/sentry_webhook/package.json
+++ b/src/sentry_webhook/package.json
@@ -12,6 +12,9 @@
     "https-browserify": "^1.0.0",
     "jasmine": "^5.1.0",
     "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-jasmine": "^4.0.2",
+    "karma-webpack": "^5.0.1",
     "puppeteer": "^13.6.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.3",
