Add an API to opt-in to the ASN metrics.

--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -8,6 +8,8 @@ tags:
     description: Server-level functions
   - name: Access Key
     description: Access key functions
+  - name: Experimental
+    description: Experimental functions. These are unstable and may disappear. Use with care.
 servers:
   - url: https://myserver/SecretPath
     description: Example URL. Change to your own server.
@@ -434,6 +436,29 @@ paths:
           description: Setting successful
         '400':
           description: Invalid request
+  /experimental/asn-metrics/enabled:
+    put:
+      description: Annotates Prometheus data metrics with autonomous system numbers (ASN).
+      tags:
+        - Server
+        - Experimental
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                asnMetricsEnabled:
+                  type: boolean
+            examples:
+              '0':
+                value: '{"asnMetricsEnabled": true}'
+      responses:
+        '204':
+          description: Setting successful
+        '400':
+          description: Invalid request
   /experimental/access-key-data-limit:
     put:
       deprecated: true
@@ -441,6 +466,7 @@ paths:
       tags:
         - Access Key
         - Limit
+        - Experimental
       requestBody:
         required: true
         content:
@@ -461,6 +487,7 @@ paths:
       tags:
         - Access Key
         - Limit
+        - Experimental
       responses:
         '204':
           description: Access key limit deleted successfully.
